Fix for nav bar on mobile
Fix for nav bar on mobile round 2


Fix for nav bar on mobile round 3


Fix for nav bar on mobile round 4

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -4,8 +4,8 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 
 html,body {
-	display: flex;
 	margin: 0px;
+	padding: 0px;
 	height: 100%;
 	width: 100%;
 	background-color: #454d6a;
@@ -25,6 +25,8 @@ nav {
 	height: 100%;
 	width: 100px;
 	position: fixed;
+	bottom: 0;
+	z-index: 999;
 	
 	img {
 		width: 90%;
@@ -87,14 +89,16 @@ nav {
 ** Main view **
 **************/
 .container {
-	overflow-x: hidden;
-	overflow-y: auto;
+	display: flex;
+	flex-direction: column;
 	float: right;
 	padding: 4%;
+	width: 85%;
 	margin-left: 100px;
 	position: relative;
 
 	.row {
+		width: 100%;
 		display: flex;
 		flex-direction: row;
 		justify-content: space-between;
@@ -223,12 +227,12 @@ code {
 				margin: 10px;
 			}
 		 
-		 .blogImageInline {
-			display: block;
-			width: 100%;
-			height: 100%;
-			margin: 10px;
-		 }
+			.blogImageInline {
+				display: block;
+				width: 100%;
+				height: 100%;
+				margin: 10px;
+			}
 		}
 		
 		.col {
@@ -241,15 +245,16 @@ code {
 
 @media only screen and (max-width: 720px) {
 	body {
-		flex-direction: column-reverse;
 		height: 100%;
-		overflow: hidden;
+		overflow: auto;
 	}
 
 	nav {
 		flex-direction: row;
 		height: 70px;
 		width: 100%;
+		position: sticky;
+		float: bottom;
 
 		.navSquare{
 			width: 70px;
@@ -261,11 +266,15 @@ code {
 	}
 
 	.container {
-		overflow-x: hidden;
-		margin: 10px;
-		margin-bottom: 70px;
+		margin-left: 10px;
+		margin-right: 10px;
+		margin-bottom: 10px;
 		padding-bottom: 10px;
 		width: 90%;
+
+		.row {
+			width: 100%;
+		}
 	}
 
 	.box {
